--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
 <head>
-<!--<link rel="stylesheet" href="style.css">-->
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
