Downloaded tooltip library

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
-<script src="https://raw.github.com/Caged/d3-tip/master/index.js"></script>
+<script src="tooltip.js"></script>
 <script src="super-bowl.js"></script>
 </body>
 </html>
