Rearrange folder structure

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <meta charset="utf-8">
 <html>
 <head>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://d3js.org/queue.v1.min.js"></script>
-<script src="tooltip.js"></script>
-<script src="super-bowl.js"></script>
+<script src="js/tooltip.js"></script>
+<script src="js/super-bowl.js"></script>
 </body>
 </html>
